<resources>
    <string name="app_name">TourApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Cerrar Sesión</string>
    <string name="my_trips_fragment_label">Mis Viajes</string>
    <string name="trip_details_fragment_label">Detalle Del Viaje</string>
    <string name="new_trip_fragment_label">Nuevo Viaje</string>
    <string name="next">Siguiente</string>
    <string name="previous">Previous</string>
    <string name="new_trip_button">Nuevo Viaje</string>
    <string name="search_placeholder">Buscar…</string>
    <string name="trip_state_content_destription">Estado del viaje</string>
    <string name="trip_name_text">%s - %s</string>
    <string name="trip_date_hour">%s - %shs</string>
    <string name="trip_id">Viaje - %d</string>
    <string name="trip_origin_destination_hour">%s - %s - %s hs</string>


    <!-- trip Details -->
    <string-array name="passengers_list">
        <item>Facundo Perri - 40.400.400</item>
        <item>Benjamin Enriquez - 40.400.401</item>
        <item>Damian Pallares - 40.400.403</item>
        <item>Constenla Juan - 40.400.404</item>
        <item>Facundo Bevilacqua - 40.400.405</item>
    </string-array>

    <string-array name="departure_locations_list">
        <item>Mercedes</item>
        <item>Lujan</item>
        <item>Capital Federal</item>
        <item>Moreno</item>
    </string-array>

    <string-array name="arrival_locations_list">
        <item>Capital Federal</item>
        <item>Mercedes</item>
        <item>Lujan</item>
        <item>Moreno</item>
    </string-array>

    <string-array name="departure_times_list">
        <item>09 : 15</item>
        <item>09 : 30</item>
        <item>09 : 45</item>
        <item>10 : 15</item>
        <item>10 : 30</item>
        <item>10 : 45</item>
        <item>11 : 15</item>
        <item>11 : 30</item>
        <item>11 : 45</item>
        <item>12 : 15</item>
        <item>12 : 30</item>
        <item>12 : 45</item>
        <item>13 : 15</item>
        <item>13 : 30</item>
        <item>13 : 45</item>
        <item>14 : 15</item>
        <item>14 : 30</item>
        <item>14 : 45</item>
    </string-array>

    <string-array name="departure_stops_list">
        <item>Hotel Mercedes</item>
        <item>Universidad de Lujan</item>
        <item>Alto Palermo</item>
        <item>Congreso</item>
    </string-array>

    <string-array name="arrival_stops_list">
        <item>Alto Palermo</item>
        <item>Hotel Mercedes</item>
        <item>Universidad de Lujan</item>
        <item>Congreso</item>
    </string-array>

    <string name="details_trip_name">Mercedes - Capital Federal</string>
    <string name="details_passengers">Pasajero</string>
    <string name="details_departure_location">Origen</string>
    <string name="details_arrival_location">Destino</string>
    <string name="details_details_date">Fecha</string>
    <string name="details_departure_time">Hora de Salida</string>
    <string name="details_departure_stop">Parada de Salida</string>
    <string name="details_arrival_stop">Parada de Llegada</string>
    <string name="details_cancel_button">Cancelar</string>
    <string name="details_save_button">Guardar</string>
    <string name="details_info">* Los viajes se pueden editar hasta 24 hs antes de la partida</string>


    <!-- API errors -->
    <string name="get_trips_error">Error obteniendo viajes</string>
    <string name="get_login_error">Error intentando loguear al usuario</string>

    <!--Nuevo viaje-->
    <string name="last_trip">Copiar ultimo viaje</string>
    <string name="from">Desde</string>

    <string name="to">Hasta</string>

    <string name="departure_date">Fecha</string>
    <string name="calendar_icon_description">Calendario</string>
    <string name="departure_hour">Hora</string>
    <string name="departure_stop">Lugar de subida</string>
    <string name="arrival_stop">Lugar de bajada</string>
    <string name="number_of_tickets">Cantidad de pasajes</string>
    <string name="passenger_name">Nombre de pasajero</string>
    <string name="passenger_dni">DNI pasajero</string>
    <string name="round_trip">Ida y vuelta</string>
    <string name="price">Precio: $X.XXX</string>
    <!---->

    <!--Confirmar viaje-->
    <string name="from_colon">Desde:</string>
    <string name="to_colon">Hasta:</string>
    <string name="departure_date_colon">Fecha:</string>
    <string name="departure_hour_colon">Hora:</string>
    <string name="departure_stop_colon">Lugar de subida:</string>
    <string name="arrival_stop_colon">Lugar de bajada:</string>
    <string name="number_of_tickets_colon">Cantidad de pasajes:</string>
    <string name="price_colon">Debe pagar un total de : $</string>
    <!---->

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bank">Banco</string>
    <string name="bank_name">Banco Banquero</string>
    <string name="cbu">CBU</string>
    <string name="cbu_number">00000000000000000000001213213</string>
    <string name="reference_payment">Los pagos se realizaran via transferencia a la siguiente cuenta:</string>
    <string name="payment_information">Debe subir el comprobante y esperar a que su pago sea validado.</string>
    <string name="upload_receipt">Subir comprobante</string>
    <string name="alias_colon">Alias:</string>
    <string name="confirm">Confirmar</string>
    <string name="confirmation_text">Se está procesando su pago. Será notificado cuando se confirme su viaje</string>
    <string name="ready">¡Listo!</string>
    <string name="result_continue">Continuar</string>
    <string name="result_screen_label">Viaje Aceptado</string>
    <string name="must_complete_all_fields">Debe completar todos los campos</string>
    <string name="passwords_not_match">Las contraseñas no coinciden</string>
    <string name="passwords_too_short">La contraseña debe contener al menos ocho caracteres</string>
    <string name="invalid_email">Email inválido</string>

    <!--Login-->
    <string name="login_title">Iniciar Sesión</string>
    <string name="login_register">¿Aún no es usuario? Registrarse</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_text">Ingresar</string>
    <!---->

    <!--Registro-->
    <string name="register_title">Registro</string>
    <string name="register_name">Nombre y Apellido</string>
    <string name="register_dni">DNI</string>
    <string name="register_password">Password</string>
    <string name="register_re_enter_password">Repetir Password</string>
    <string name="register_button">Registrarse</string>
    <string name="register_cancel_button">Cancelar</string>
    <!---->

</resources>