<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.LoginFragment">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="@dimen/title_string_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/title_margin_vertical"
        android:layout_marginBottom="@dimen/between_title_margin_vertical"
        android:textColor="@color/orange"
        />

    <TextView
        android:id="@+id/login_title"
        android:layout_below="@id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textSize="@dimen/subtitle_string_size"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/input_margin_vertical"
        android:textColor="@color/orange"
        />

    <EditText
        android:id="@+id/email_input"
        android:layout_below="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:layout_marginHorizontal="@dimen/input_margin_horizontal"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_input"
        android:layout_below="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:layout_marginHorizontal="@dimen/input_margin_horizontal"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:layout_marginVertical="@dimen/input_margin_vertical"/>

    <TextView
        android:id="@+id/register_txt"
        android:layout_below="@id/password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:textAlignment="center"
        android:textSize="@dimen/register_string_size"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/input_margin_vertical"
        android:textColor="@color/orange"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_below="@id/register_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login_text"/>



</RelativeLayout>