<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.TripDetailsFragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginVertical="@dimen/screen_margin_vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/trip_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/info_margin_horizontal"
            android:textStyle="bold"
            android:textSize="25dp"
            android:ellipsize="end"
            android:text="@string/details_trip_name"
            android:layout_marginBottom="10dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passengers"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trip_name"
            android:layout_marginHorizontal="@dimen/dropdowns_margin_Horizontal"
            android:layout_marginVertical="@dimen/dropdowns_margin_vertical">

            <AutoCompleteTextView
                android:id="@+id/passengers_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_passengers"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/departure_location"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passengers"
            android:layout_marginHorizontal="@dimen/dropdowns_margin_Horizontal"
            android:layout_marginVertical="@dimen/dropdowns_margin_vertical">

            <AutoCompleteTextView
                android:id="@+id/departure_location_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_departure_location"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/arrival_location"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/departure_location"
            android:layout_marginHorizontal="@dimen/dropdowns_margin_Horizontal"
            android:layout_marginVertical="@dimen/dropdowns_margin_vertical">

            <AutoCompleteTextView
                android:id="@+id/arrival_location_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_arrival_location"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_picker"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/arrival_location"
            android:layout_marginHorizontal="@dimen/dropdowns_margin_Horizontal"
            android:layout_marginVertical="@dimen/dropdowns_margin_vertical"
            app:startIconDrawable="@drawable/ic_calendar">

            <AutoCompleteTextView
                android:id="@+id/date_picker_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_details_date"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/departure_time"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_picker"
            android:layout_marginHorizontal="@dimen/dropdowns_margin_Horizontal"
            android:layout_marginVertical="@dimen/dropdowns_margin_vertical">

            <AutoCompleteTextView
                android:id="@+id/departure_time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_departure_time"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/departure_stop"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/departure_time"
            android:layout_marginHorizontal="@dimen/dropdowns_margin_Horizontal"
            android:layout_marginVertical="@dimen/dropdowns_margin_vertical">

            <AutoCompleteTextView
                android:id="@+id/departure_stop_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_departure_stop"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/arrival_stop"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/departure_stop"
            android:layout_marginHorizontal="@dimen/dropdowns_margin_Horizontal"
            android:layout_marginVertical="@dimen/dropdowns_margin_vertical">

            <AutoCompleteTextView
                android:id="@+id/arrival_stop_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_arrival_stop"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/qr_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/arrival_stop"
            android:layout_marginVertical="@dimen/buttons_margin_Vertical"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/qr_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qr_container"
            android:layout_marginVertical="@dimen/buttons_margin_Vertical"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/buttons_margin_between"
                android:text="@string/details_cancel_button" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/buttons_margin_between"
                android:text="@string/details_save_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/info_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttons"
            android:layout_marginHorizontal="@dimen/info_margin_horizontal"
            android:text="@string/details_info" />

    </RelativeLayout>
</ScrollView>